Client - CSS/Board-Styles

--- a/src/App.css
+++ b/src/App.css
@@ -57,6 +57,10 @@ input {
   cursor: pointer;
 }
 
+.game-container td.empty {
+  background: #DDD;
+}
+
 .game-container td.revealed {
   cursor: default;
 }
